# vibetunnel

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATION_ALIGNMENT.md  README.md  TEST_COVERAGE_IMPROVEMENTS.md  TEST_COVERAGE_REPORT.md  TODO.md  appcast-prerelease.xml  appcast.xml  docs.json  update_branding.sh  update_to_tunnelforge.sh
.claude/: settings.local.json
.github/scripts/: verify-release.sh
.github/workflows/: desktop-release.yml  docs.yml  tauri.yml  test-coverage.yml
TunnelForge.xcworkspace/: contents.xcworkspacedata
apple/: .swiftformat  .swiftlint.yml  Local.xcconfig.template
apple/docs/: logging-private-fix.md
apple/logging/: README.md  TunnelForge-Logging.mobileconfig
deprecated/vibetunnel-web/: package.json  start-vibetunnel.sh
desktop/: README.md  index.html  package.json  playwright.config.ts  serve-dev.js  test.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: linux_platform.rs  macos_platform.rs  main.rs  main.rs.backup  windows_platform.rs
desktop/tests/: global-setup.ts  global-teardown.ts
development/: .env.example  ARCHITECTURE.md  CLAUDE.md  MIGRATION_CHECKLIST.md  MIGRATION_SUMMARY.md  PHASE6_COMPLETION_REPORT.md  README.md  TODO.md  cleanup-servers.sh  docker-compose.yml  docker-migration-test.sh  frontend-integration-test.js  migration-test.sh  start-dev.sh  start-docker.sh  start-unified.sh  test-integration.sh  validate-migration.sh
development/bun-web/: .dockerignore  Dockerfile  api-regression.spec.ts  debug-browser.js  debug-terminal.js  full-regression.spec.ts  package.json  package.json.bun  playwright.config.ts  playwright.mac-app.config.ts  pnpm-lock.yaml
development/docs/: CURRENT_ARCHITECTURE.md  LINUX_DEPLOYMENT.md  PROPOSED_ARCHITECTURE.md
development/go-server/: .dockerignore  .golangci.yml  AGENTS.md  BUN_MIGRATION.md  Dockerfile  Makefile  NEXT_STEPS.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_ASSESSMENT.md  PROGRESS_REPORT.md  SECURITY_REPORT.md  coverage.html  docker-compose.yml  go.mod  go.sum  start.sh
development/logs/: migration-validation-report.md
development/monitoring/: otel-collector-config.yaml  prometheus.yml
development/scripts/: docker-build.sh
docs/: API.md  ARCHITECTURE.md  BUN_USAGE.md  CONTRIBUTING.md  DOCUMENTATION_UPDATES.md  IMPLEMENTATION_COMPARISON.md  INDEX.md  MISSING_MACOS_FEATURES.md  PRD.md  RELEASE.md  ROADMAP.md  TESTING_EXTERNAL_DEVICES.md  accessibility.md  architecture-mario.md  authentication.md  build-system.md  changelog-management.md  cjk-ime-input.md  claude.md  code-organization.md  custom-node.md  deployment.md  development-tools.md  development.md  documentation-structure.md  files.md  git-hooks.md  git-worktree-follow-mode.md  hq.md  introduction.mdx  ios-spec.md  keyboard-shortcuts.md  logging-style-guide.md  npm-release.md  openapi.md  org-migrate.md  performance.md  project-overview.md  push-impl.md  push-notification.md  (+8 more)
documentation/: .gitignore  README.md  astro.config.mjs  docs.json  package.json
ios/: CLAUDE.md  Package.swift  run-tests-xcode.sh  run-tests.sh
ios/TunnelForge/: version.xcconfig
ios/TunnelForge-iOS.xcodeproj/: project.pbxproj
ios/TunnelForgeTests/: AuthenticationTests.swift  FileSystemTests.swift  README.md  SessionListViewModelTests.swift  StandaloneTests.swift  TestCoverage.md  TestingApproach.md
ios/VibeTunnel/: App  Configuration  Models  Services  Shared.xcconfig  Utils  ViewModels  Views  version.xcconfig
ios/VibeTunnelTests/: AuthenticationTests.swift
ios/scripts/: common.sh  lint.sh  quick-test.sh  test-with-coverage.sh  vtlog.sh
linux/: README.md  package.json
linux/src-tauri/: Cargo.toml  tauri.conf.json
linux/src-tauri/src/: main.rs
mac/: CLAUDE.md  DEPRECATED.md  Package.swift  README.md  TunnelForge-Info.plist  generate_menubar_icons.py  generate_simple_menubar_icons.py  generate_tunnelforge_icons.py  test_server_control.sh
mac/TunnelForge/: Info.plist  TunnelForge-Mac.xctestplan  TunnelForgeApp.swift  version.xcconfig
mac/TunnelForge.xcodeproj/: project.pbxproj
mac/docs/: RELEASE_GUIDE.md  (+5 more)
scripts/: restore-mcp.sh  sync-versions.js  test-all-coverage.sh  tf  validate-version-sync.js  vtlog.sh
server/: .golangci.yml  Dockerfile  Makefile  README.md  README_PRIMARY.md  WEBSOCKET_OPTIMIZATION_PLAN.md  cloudflare-tunnel.yml  coverage.html  coverage.out  package-bun-migration.json  start.sh  test_endpoints.sh  test_local_bypass.sh  test_shell.go
web/: .gitignore  .npmrc  .prebuildrc  CLAUDE.md  DEPRECATION_NOTICE.md  Dockerfile.test-beta15  Dockerfile.test-beta15-full  README.md  TEST_FIX_SUMMARY.md  TODO.md  analyze_coverage.js  build-native-bun.js  build-native.js  debug-browser.js  docker-compose.yml  full-regression.spec.ts  package.json  package.json.bun  package.npm.json  playwright.config.ts  start-tunnelforge.sh  test-beta15-full.js  test-beta15-full.sh  test-beta15-package.sh  test-beta15-simple.sh  test-npm-beta.sh  test-tunnelforge-beta15.js  vitest.config.ts
windows/: README.md  package.json
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/src/: main.rs
(+585 files in other folders)
