[package]
name = "tunnelforge-desktop"
version = "1.0.0"
description = "TunnelForge Desktop App - Cross-platform terminal sharing"
authors = ["TunnelForge Team"]
license = "MIT"
repository = "https://github.com/ferg-cod3s/tunnelforge"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = ["codegen"] }

[dependencies]
tauri = { version = "1.5", features = [
  "api-all",
  "system-tray",
  "updater", 
  "window-all",
  "process-command-api",
  "fs-all",
  "path-all",
  "shell-open",
  "notification-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
dirs = "5.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.50"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Services", 
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]}

# Linux-specific dependencies  
[target.'cfg(target_os = "linux")'.dependencies]
freedesktop_desktop_entry = "0.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "tunnelforge"
path = "src/main.rs"