[package]
name = "tunnelforge-windows"
version = "1.0.0"
description = "TunnelForge Desktop App for Windows - Terminal sharing with web interface"
authors = ["TunnelForge Team"]
license = "MIT"
repository = "https://github.com/ferg-cod3s/tunnelforge"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = ["codegen"] }

[dependencies]
tauri = { version = "1.5", features = [
  "api-all",
  "system-tray",
  "updater",
  "window-all",
  "process-command-api",
  "fs-all",
  "path-all",
  "shell-open",
  "notification-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
dirs = "5.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.50"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]}

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "tunnelforge-windows"
path = "src/main.rs"